[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LingBot_VA"
version = "0.0.0"
description = "LingBot-VA: A Pragmatic VA Foundation Model"
authors = [
    { name = "Robbyant Team", email = "fengchang.ll@antgroup.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Core PyTorch (compatible with lerobot)
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    # Vision and Diffusion
    "diffusers>=0.27.2",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    # Core utilities
    "numpy>=1.24.0,<2.3.0",
    "einops>=0.7.0",
    "tqdm>=4.60.0",
    "imageio>=2.30.0",
    "pillow>=9.5.0",
    # Model acceleration
    "accelerate>=0.20.0",
    # Websocket for server/client
    "websockets>=12.0",
    "msgpack>=1.0.0",
    # Image processing
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    # Additional utilities
    "easydict>=1.10",
    "ftfy>=6.1.0",
    "psutil>=5.9.0",
    "packaging>=23.0",
    "pyyaml>=6.0.0",
    "omegaconf>=2.3.0",
    "huggingface-hub>=0.20.0"
]

[project.optional-dependencies]
all = [
    "lerobot @ git+https://github.com/huggingface/lerobot.git",
    "flash-attn>=2.0.0"
]
lerobot = [
    "lerobot @ git+https://github.com/huggingface/lerobot.git"
]
flash = [
    "flash-attn>=2.0.0"
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0"
]

[project.urls]
homepage = "https://github.com/Robbyant"
documentation = "https://github.com/Robbyant"
repository = "https://github.com/Robbyant"
huggingface = "https://github.com/Robbyant"
modelscope = "https://github.com/Robbyant"
discord = "https://github.com/Robbyant"

[tool.setuptools]
packages = ["wan_va"]

[tool.setuptools.package-data]
"wan_va" = ["**/*.py"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true


